add feature to define recommendations
